kubernetes/services/loki/loki-service.yml
apiVersion: v1
kind: Service
metadata:
  name: loki
  namespace: observability
spec:
  ports:
  - name: http
    port: 3000
    targetPort: 3000
  selector:
    app: loki
  type: ClusterIP
